# hello-rust

./: Cargo.toml  README.md  package-lock.json  package.json  vercel.json
api/: handler.rs
src/: hello.rs  main.rs
templates/: hello.html
